<resources>
    <string name="app_name">Kiemas</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="title_activity_maps">Map</string>
    <string name="place">Vieta</string>
    <string name="address">Pasirinkite adresą</string>
    <string name="email_address">Elektroninis paštas</string>
    <string name="email_example">Vardenis@paštas.lt</string>
    <string name="description">Aprašymas</string>
    <string name="write_description">Aprašykite problemą</string>
    <string name="upload_photo">Įkelti Nuotrauką</string>
    <string name="upload_problem">Įkelti pranešimą</string>
    <string name="button_map">Žemėlapis</string>
    <string name="button_problem">Pranešti Problemą</string>
    <string name="button_about">Apie aplikaciją</string>
    <string name="unexpected_error">Atsitiko klaida. Bandykite dar kartą</string>
    <string name="no_image">Jūs nepasirinkote nuotraukos!</string>
    <string name="google_api_key">AIzaSyCBQtRReV7hAUumc07eNh8t4vhboQZdXt4</string>
    <string name="empty"> </string>
    <string name="about_text_one">\"Aleksandro kiemas\" - noro padėti savo miestui ir “Barclays” technologijų akademijos įkvėpta mobiliosios programėlės Panevėžiui idėja, kurios tikslai - skatinti bendruomeniškumą ir pilietiškumą, gyventojų įsitraukimą į savo miesto gyvenimą.</string>
    <string name="about_text_two">Programėlė suteikia galimybę greitai ir lengvai pranešti apie problemas mieste, o savivaldybės darbuotojams - efektyviai jas spręsti. Veikimo principas - paprastas - nufotografuokite pastebėtą problemą (pvz.: nuvirtęs medis, neveikiantis šviesoforas) ir ji greitai pasieks miesto savivaldybės darbuotojus, kurie pasirūpins, kad problemos neliktų. Problemų žemėlapyje stebėkite fiksuojamas problemas, bendrajame lange ieškokite informacijos apie mieste vykstančius renginius ir savivaldybės organizuojamas apklausas.</string>
    <string name="about_text_three"></string>
    <string name="title_activity_menu">Menu</string>
</resources>
