<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/circl250" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:onClick="openProblem">

        <Button
            style="@style/captionOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_rate_review_white_24dp"
            android:text="@string/button_problem"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:onClick="openMap">

        <Button
            style="@style/captionOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_map_white_24dp"
            android:text="@string/button_map"
            android:onClick="openMap"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:onClick="openAbout">

        <Button
            style="@style/captionOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_people_white_24dp"
            android:text="@string/button_about"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </FrameLayout>


</LinearLayout>
